# parking-os-releases

./: .env.example  .gitignore  KAMERY_INSTRUKCJA.md  Kopia Parking Koszta.xlsx  PLAN_IMPLEMENTACJI.md  Parking.OS.bat  README.md  RELEASE_2026.1.13.md  UPDATE_INSTRUKCJA.md  latest.json  package-lock.json  package.json  vite.config.ts
.githooks/: pre-commit
.github/workflows/: release.yml  secret-scan.yml
detection/: detector.py
downloads/: Parking.OS_2026.1.0_x64-setup.sha256.txt
public/: splashscreen.html
pwa/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
pwa/public/: manifest.json
pwa/src/: App.tsx  index.css  supabase.ts  vite-env.d.ts
rtsp-proxy/: .env.example  MEDIAMTX_SETUP.md  mediamtx_auto.yml  package-lock.json  package.json  server.js
rtsp-proxy/hls_output/: cam1.m3u8  cam1_007.ts  cam1_008.ts  cam1_009.ts  cam1_010.ts  cam1_016.ts  cam1_017.ts  cam1_018.ts  cam1_019.ts  cam1_030.ts  cam1_031.ts  cam1_032.ts  cam1_033.ts  cam1_1083.ts  (+59 more)
scripts/: secret-scan.mjs  sync-live-defaults.mjs
sql/: migration_assistant_prompts.sql  migration_audit_log_unified.sql  migration_events_log.sql  migration_extra_open_days.sql  migration_iter11_assistant_prompts_rls_fix.sql  migration_iter11_waitlist.sql  migration_no_show_bans.sql  migration_user_profiles.sql
src/: App.tsx  index.css
src-tauri/: Cargo.toml  default-settings.json  nsis-hooks.nsh  nsis-tauri-polish.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
updates/: README_TEMPLATE.md
(+83 files in other folders)
